# TableViewer

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: datatable.vue
